--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "this is a server",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "formidable": "^2.0.1",
     "multer": "^1.4.3",
     "pug": "^3.0.2"
   },
